fix all layout issues

--- a/app/assets/stylesheets/feed/sidebar.scss
+++ b/app/assets/stylesheets/feed/sidebar.scss
@@ -6,6 +6,7 @@
 .sidebar-links {
 
   user-select: none;
+  position: fixed;
 
   li a {
     
